Cleaned up project cf-performance