@@ -2,9 +2,9 @@ package ch.ethz.inf.vs.californium.bench;
 
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
-import java.util.Arrays;
 import java.util.concurrent.Executors;
 
+import ch.ethz.inf.vs.californium.CalifonriumLogger;
 import ch.ethz.inf.vs.californium.coap.Request;
 import ch.ethz.inf.vs.californium.coap.Response;
 import ch.ethz.inf.vs.californium.network.CoAPEndpoint;
@@ -13,50 +13,45 @@ import ch.ethz.inf.vs.californium.network.NetworkConfigDefaults;
 import ch.ethz.inf.vs.californium.server.Server;
 
 /**
- * This is an example server that contains a few resources for demonstration.
- * 
+ * This server has optimal parameters for benchmarking. The optimal JVM
+ * parameters on my machine were:
+ * <pre>
  * -Xms4000m -Xmx4000m
--XX:+ExplicitGCInvokesConcurrent -XX:+UseConcMarkSweepGC
--XX:+CMSIncrementalMode
--XX:NewSize=2000m
--XX:NewRatio=1
--XX:GCTimeRatio=32
-
+ * </pre>
  * @author Martin Lanter
  */
 public class BenchmarkServer {
 	
-	public static int udp_sender;
-	public static int udp_receiver;
-	public static int pool; // If we don't use executor in endpoint
+	public static final int CORES = Runtime.getRuntime().availableProcessors();
+	
+	public static final String DEFAULT_ADDRESS = null;
+	public static final int DEFAULT_PORT = 5683;
+	public static final int DEFAULT_SENDER_COUNT = CORES;
+	public static final int DEFAULT_RECEIVER_COUNT = CORES;
+	public static final int DEFAULT_ENDPOINT_THREAD_COUNT = CORES;
 
 	public static void main(String[] args) throws Exception {
-//		args = new String[] {"-ports", "1", "5683" ,"-pool", "4", "-udp-sender", "0"};
+//		args = new String[] {"-port", "7777" ,"-pool", "500", "-udp-sender", "1"};
+		System.out.println("This machine has "+CORES+" cores");
+		
 		String address = null;
-		int port = 5683;
-		int cores = Runtime.getRuntime().availableProcessors();
-		udp_sender = cores;
-		udp_receiver = cores;
-		pool = cores;
-		int[] ports = null;
+		int port = DEFAULT_PORT;
+		int udp_sender = DEFAULT_SENDER_COUNT;
+		int udp_receiver = DEFAULT_RECEIVER_COUNT;
+		int endpoint_threads = DEFAULT_ENDPOINT_THREAD_COUNT;
 		
 		if (args.length > 0) {
 			int index = 0;
 			while (index < args.length) {
 				String arg = args[index];
 				if ("-pool".equals(arg)) {
-					pool = Integer.parseInt(args[index+1]);
+					endpoint_threads = Integer.parseInt(args[index+1]);
 				} else if ("-udp-sender".equals(arg)) {
 					udp_sender = Integer.parseInt(args[index+1]);
 				} else if ("-udp-receiver".equals(arg)) {
 					udp_receiver = Integer.parseInt(args[index+1]);
 				} else if ("-port".equals(arg)) {
 					port = Integer.parseInt(args[index+1]);
-				} else if ("-ports".equals(arg)) {
-					int cn = Integer.parseInt(args[index+1]);
-					ports = new int[cn];
-					for (int i=0;i<cn;i++) ports[i] = Integer.parseInt(args[index+2+i]);
-					index += cn;
 				} else if ("-address".equals(arg)) {
 					address = args[index+1];
 				} else {
@@ -67,41 +62,22 @@ public class BenchmarkServer {
 		}
 		
 		InetAddress addr = address!=null ? InetAddress.getByName(address) : null;
-		System.out.println("Starting Example Server");
-		System.out.println("Available cores: " + cores);
-		System.out.println("Use thread pool of size "+pool);
-		System.out.println("Bind to address "+addr);
-		if (ports != null)
-			System.out.println("Bind to ports "+Arrays.toString(ports));
-		else System.out.println("Bind to port "+port);
+		InetSocketAddress sockAddr = new InetSocketAddress((InetAddress) addr, port);
+		System.out.println("Start benchmark server and bind to " + sockAddr);
+		System.out.println("UDP connector uses "+udp_sender+" sender and "+udp_receiver+" receiver threads");
+		System.out.println("Endpoints uses thread-pool with "+endpoint_threads+" threads");
 		
-//		setBenchmarkConfiguration();
+		setBenchmarkConfiguration(udp_sender, udp_receiver);
 
-		Server server = createServer();
-		if (ports != null) {
-			for (int p:ports) {
-//				Server server = createServer();
-				server.addEndpoint(new CoAPEndpoint(new InetSocketAddress((InetAddress) addr, p)));
-//				server.start();
-			}
-		} else {
-//			Server server = createServer();
-			server.addEndpoint(new CoAPEndpoint(new InetSocketAddress((InetAddress) addr, port)));
-//			server.start();
-		}
+		Server server = new Server();
+		server.setExecutor(Executors.newScheduledThreadPool(endpoint_threads));
+		server.add(new BenchmarkResource("benchmark"));
+		server.add(new FibonacciResource("fibonacci"));
+		server.addEndpoint(new CoAPEndpoint(sockAddr));
 		server.start();
 	}
 	
-	private static Server createServer() {
-		Server server = new Server();
-		server.setExecutor(Executors.newScheduledThreadPool(pool));
-//		server.setExecutor(new CfExecutor(pool));
-		server.add(new HelloWorldResource("hello"));
-		server.add(new FibonacciResource("fibonacci"));
-		return server;
-	}
-	
-	private static void setBenchmarkConfiguration() {
+	private static void setBenchmarkConfiguration(int udp_sender, int udp_receiver) {
 		
 		// Network configuration optimal for performance benchmarks
 		NetworkConfig.createStandardWithoutFile()
@@ -113,8 +89,6 @@ public class BenchmarkServer {
 			// Increase buffer for network interface to 10 MB
 			.setInt(NetworkConfigDefaults.UDP_CONNECTOR_RECEIVE_BUFFER, 10*1000*1000)
 			.setInt(NetworkConfigDefaults.UDP_CONNECTOR_SEND_BUFFER, 10*1000*1000)
-//			.setInt(NetworkConfigDefaults.UDP_CONNECTOR_RECEIVE_BUFFER, 8192)
-//			.setInt(NetworkConfigDefaults.UDP_CONNECTOR_SEND_BUFFER, 8192)
 		
 			// Increase threads for receiving and sending packets through the socket
 			.setInt(NetworkConfigDefaults.UDP_CONNECTOR_RECEIVER_THREAD_COUNT, udp_receiver)
@@ -124,7 +98,12 @@ public class BenchmarkServer {
 			.setBoolean(NetworkConfigDefaults.LOG_MESSAGES, false)
 			.setBoolean(NetworkConfigDefaults.UDP_CONNECTOR_LOG_PACKETS, false);
 		
-//		CalifonriumLogger.disableLogging();
+		/*
+		 * Since we have already disabled LOG_MESSAGES and UDP_CONNECTOR_LOG_PACKETS,
+		 * there should only be some log entries for the server startup. If we also
+		 * want to get rid of those, disable all logging here:
+		 */
+		 CalifonriumLogger.disableLogging();
 	}
 	
 	/*
@@ -133,7 +112,7 @@ public class BenchmarkServer {
 	public static void selfTest() {
 		try {
 			Request request = Request.newGet();
-			request.setURI("localhost:5683/hello");
+			request.setURI("localhost:5683/benchmark");
 			request.send();
 			Response response = request.waitForResponse(1000);
 			System.out.println("received "+response);
